change structure, write intro, shit

--- a/paper/1-catalog/preamble.tex
+++ b/paper/1-catalog/preamble.tex
@@ -10,8 +10,10 @@
 
 \definecolor{cbblue}{HTML}{3182bd}
 \usepackage{hyperref}
-\hypersetup{colorlinks=true,linkcolor=cbblue,citecolor=black,
-            filecolor=cbblue,urlcolor=cbblue}
+\definecolor{linkcolor}{rgb}{0.02,0.35,0.55}
+\definecolor{citecolor}{rgb}{0.45,0.45,0.45}
+\hypersetup{colorlinks=true,linkcolor=linkcolor,citecolor=citecolor,
+            filecolor=linkcolor,urlcolor=linkcolor}
 \hypersetup{pageanchor=true}
 
 \newcommand{\documentname}{\textsl{Article}}
