--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,145 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2017-08-04 09:38:18 +0200 
+%% Created for Adrian Price-Whelan at 2017-08-12 12:17:18 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ness:2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...808...16N},
+	Archiveprefix = {arXiv},
+	Author = {{Ness}, M. and {Hogg}, D.~W. and {Rix}, H.-W. and {Ho}, A.~Y.~Q. and {Zasowski}, G.},
+	Date-Added = {2017-08-12 10:17:16 +0000},
+	Date-Modified = {2017-08-12 10:17:17 +0000},
+	Doi = {10.1088/0004-637X/808/1/16},
+	Eid = {16},
+	Eprint = {1501.07604},
+	Journal = {\apj},
+	Keywords = {methods: data analysis, methods: statistical, stars: abundances, stars: fundamental parameters, surveys, techniques: spectroscopic},
+	Month = jul,
+	Pages = {16},
+	Primaryclass = {astro-ph.SR},
+	Title = {{The Cannon: A data-driven approach to Stellar Label Determination}},
+	Volume = 808,
+	Year = 2015,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/808/1/16}}
+
+@article{Ness:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...823..114N},
+	Archiveprefix = {arXiv},
+	Author = {{Ness}, M. and {Hogg}, D.~W. and {Rix}, H.-W. and {Martig}, M. and {Pinsonneault}, M.~H. and {Ho}, A.~Y.~Q.},
+	Date-Added = {2017-08-12 10:14:37 +0000},
+	Date-Modified = {2017-08-12 10:14:38 +0000},
+	Doi = {10.3847/0004-637X/823/2/114},
+	Eid = {114},
+	Eprint = {1511.08204},
+	Journal = {\apj},
+	Keywords = {Galaxy: stellar content, methods: data analysis, methods: statistical, stars: evolution, stars: fundamental parameters, techniques: spectroscopic},
+	Month = jun,
+	Pages = {114},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Spectroscopic Determination of Masses (and Implied Ages) for Red Giants}},
+	Volume = 823,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/0004-637X/823/2/114}}
+
+@article{Martig:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.456.3655M},
+	Archiveprefix = {arXiv},
+	Author = {{Martig}, M. and {Fouesneau}, M. and {Rix}, H.-W. and {Ness}, M. and {M{\'e}sz{\'a}ros}, S. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Pinsonneault}, M. and {Serenelli}, A. and {Silva Aguirre}, V. and {Zamora}, O.},
+	Date-Added = {2017-08-12 10:14:17 +0000},
+	Date-Modified = {2017-08-12 10:14:18 +0000},
+	Doi = {10.1093/mnras/stv2830},
+	Eprint = {1511.08203},
+	Journal = {\mnras},
+	Keywords = {stars: abundances, stars: evolution, stars: fundamental parameters},
+	Month = mar,
+	Pages = {3655-3670},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Red giant masses and ages derived from carbon and nitrogen abundances}},
+	Volume = 456,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stv2830}}
+
+@article{Majewski:2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150905420M},
+	Archiveprefix = {arXiv},
+	Author = {{Majewski}, S.~R. and {Schiavon}, R.~P. and {Frinchaboy}, P.~M. and {Allende Prieto}, C. and {Barkhouser}, R. and {Bizyaev}, D. and {Blank}, B. and {Brunner}, S. and {Burton}, A. and {Carrera}, R. and {Chojnowski}, S.~D. and {Cunha}, K. and {Epstein}, C. and {Fitzgerald}, G. and {Garcia Perez}, A.~E. and {Hearty}, F.~R. and {Henderson}, C. and {Holtzman}, J.~A. and {Johnson}, J.~A. and {Lam}, C.~R. and {Lawler}, J.~E. and {Maseman}, P. and {Meszaros}, S. and {Nelson}, M. and {Coung Nguyen}, D. and {Nidever}, D.~L. and {Pinsonneault}, M. and {Shetrone}, M. and {Smee}, S. and {Smith}, V.~V. and {Stolberg}, T. and {Skrutskie}, M.~F. and {Walker}, E. and {Wilson}, J.~C. and {Zasowski}, G. and {Anders}, F. and {Basu}, S. and {Beland}, S. and {Blanton}, M.~R. and {Bovy}, J. and {Brownstein}, J.~R. and {Carlberg}, J. and {Chaplin}, W. and {Chiappini}, C. and {Eisenstein}, D.~J. and {Elsworth}, Y. and {Feuillet}, D. and {Fleming}, S.~W. and {Galbraith-Frew}, J. and {Garcia}, R.~A. and {Anibal Garcia-Hernandez}, D. and {Gillespie}, B.~A. and {Girardi}, L. and {Gunn}, J.~E. and {Hasselquist}, S. and {Hayden}, M.~R. and {Hekker}, S. and {Ivans}, I. and {Kinemuchi}, K. and {Klaene}, M. and {Mahadevan}, S. and {Mathur}, S. and {Mosser}, B. and {Muna}, D. and {Munn}, J.~A. and {Nichol}, R.~C. and {O'Connell}, R.~W. and {Robin}, A.~C. and {Rocha-Pinto}, H. and {Schultheis}, M. and {Serenelli}, A.~M. and {Shane}, N. and {Silva Aguirre}, V. and {Sobeck}, J.~S. and {Thompson}, B. and {Troup}, N.~W. and {Weinberg}, D.~H. and {Zamora}, O.},
+	Date-Added = {2017-08-12 10:01:53 +0000},
+	Date-Modified = {2017-08-12 10:01:54 +0000},
+	Eprint = {1509.05420},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Astrophysics of Galaxies},
+	Month = sep,
+	Primaryclass = {astro-ph.IM},
+	Title = {{The Apache Point Observatory Galactic Evolution Experiment (APOGEE)}},
+	Year = 2015}
+
+@article{Garcia-Perez:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016AJ....151..144G},
+	Archiveprefix = {arXiv},
+	Author = {{Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Allende Prieto}, C. and {Holtzman}, J.~A. and {Shetrone}, M. and {M{\'e}sz{\'a}ros}, S. and {Bizyaev}, D. and {Carrera}, R. and {Cunha}, K. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Johnson}, J.~A. and {Majewski}, S.~R. and {Nidever}, D.~L. and {Schiavon}, R.~P. and {Shane}, N. and {Smith}, V.~V. and {Sobeck}, J. and {Troup}, N. and {Zamora}, O. and {Weinberg}, D.~H. and {Bovy}, J. and {Eisenstein}, D.~J. and {Feuillet}, D. and {Frinchaboy}, P.~M. and {Hayden}, M.~R. and {Hearty}, F.~R. and {Nguyen}, D.~C. and {O'Connell}, R.~W. and {Pinsonneault}, M.~H. and {Wilson}, J.~C. and {Zasowski}, G.},
+	Date-Added = {2017-08-12 10:00:05 +0000},
+	Date-Modified = {2017-08-12 10:00:06 +0000},
+	Doi = {10.3847/0004-6256/151/6/144},
+	Eid = {144},
+	Eprint = {1510.07635},
+	Journal = {\aj},
+	Keywords = {Galaxy: center, Galaxy: structure, methods: data analysis, stars: abundances, stars: atmospheres},
+	Month = jun,
+	Pages = {144},
+	Primaryclass = {astro-ph.SR},
+	Title = {{ASPCAP: The APOGEE Stellar Parameter and Chemical Abundances Pipeline}},
+	Volume = 151,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/0004-6256/151/6/144}}
+
+@article{Blanton:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017AJ....154...28B},
+	Archiveprefix = {arXiv},
+	Author = {{Blanton}, M.~R. and {Bershady}, M.~A. and {Abolfathi}, B. and {Albareti}, F.~D. and {Allende Prieto}, C. and {Almeida}, A. and {Alonso-Garc{\'{\i}}a}, J. and {Anders}, F. and {Anderson}, S.~F. and {Andrews}, B. and et al.},
+	Date-Added = {2017-08-12 09:58:51 +0000},
+	Date-Modified = {2017-08-12 09:58:53 +0000},
+	Doi = {10.3847/1538-3881/aa7567},
+	Eid = {28},
+	Eprint = {1703.00052},
+	Journal = {\aj},
+	Keywords = {cosmology: observations, galaxies: general, Galaxy: general, instrumentation: spectrographs, stars: general, surveys},
+	Month = jul,
+	Pages = {28},
+	Title = {{Sloan Digital Sky Survey IV: Mapping the Milky Way, Nearby Galaxies, and the Distant Universe}},
+	Volume = 154,
+	Year = 2017,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/1538-3881/aa7567}}
+
+@article{Price-Whelan:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...837...20P},
+	Archiveprefix = {arXiv},
+	Author = {{Price-Whelan}, A.~M. and {Hogg}, D.~W. and {Foreman-Mackey}, D. and {Rix}, H.-W.},
+	Date-Added = {2017-08-12 09:45:33 +0000},
+	Date-Modified = {2017-08-12 09:45:36 +0000},
+	Doi = {10.3847/1538-4357/aa5e50},
+	Eid = {20},
+	Eprint = {1610.07602},
+	Journal = {\apj},
+	Keywords = {binaries: spectroscopic, methods: data analysis, methods: statistical, planets and satellites: fundamental parameters, surveys, techniques: radial velocities},
+	Month = mar,
+	Pages = {20},
+	Primaryclass = {astro-ph.SR},
+	Title = {{The Joker: A Custom Monte Carlo Sampler for Binary-star and Exoplanet Radial Velocity Data}},
+	Volume = 837,
+	Year = 2017,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/1538-4357/aa5e50}}
 
 @article{Perez:2007,
 	Author = {P\'erez, Fernando and Granger, Brian E.},
