--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2017-08-12 12:17:18 +0200 
+%% Created for Adrian Price-Whelan at 2017-08-14 10:11:58 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{Murray:2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010exop.book...15M},
+	Author = {{Murray}, C.~D. and {Correia}, A.~C.~M.},
+	Booktitle = {Exoplanets},
+	Date-Added = {2017-08-14 08:11:56 +0000},
+	Date-Modified = {2017-08-14 08:11:57 +0000},
+	Editor = {{Seager}, S.},
+	Month = dec,
+	Pages = {15-23},
+	Title = {{Keplerian Orbits and Dynamics of Exoplanets}},
+	Year = 2010}
 
 @article{Ness:2015,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
