--- a/notebooks/TheJoker DR13-DR14.ipynb
+++ b/notebooks/TheJoker DR13-DR14.ipynb
@@ -380,6 +380,76 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "from os import path\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_figure(n, apogeeid):\n",
+    "    tpl = r\"\"\"\n",
+    "    \\begin{figure}\n",
+    "    \\begin{tabular}{ll}\n",
+    "        \\subfloat{\\includegraphics[width=4in]{figures/\"\"\"+n+\"\"\"_\"\"\"+apogeeid+\"\"\"_orbits.png}} &\n",
+    "        \\subfloat{\\includegraphics[width=5.5in]{figures/\"\"\"+n+\"\"\"_\"\"\"+apogeeid+\"\"\"_samples.png}}\n",
+    "    \\end{tabular}\n",
+    "    \\caption{\"\"\"+apogeeid+\"\"\"}\n",
+    "    \\end{figure}\n",
+    "    \"\"\"\n",
+    "    return tpl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "done = []\n",
+    "for n in [4, 8, 16]:\n",
+    "    for filename in glob.glob(\"../scripts/exp1/plots/{0}_*.png\".format(n)):\n",
+    "        apid = path.basename(filename).split('_')[1]\n",
+    "        if apid in done:\n",
+    "            continue\n",
+    "\n",
+    "        print(get_figure(str(n), apid))\n",
+    "        done.append(apid)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
